:lipstick: Fix tap background on mobile devices

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,3 +9,11 @@ html {
 body {
   overflow-x: hidden;
 }
+
+input,
+textarea,
+button,
+select,
+a {
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
